# WaveOS

./: .pip-audit.toml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  waveos-k8s.yaml
.github/workflows/: ci.yml  release-dry-run.yml  release-rc.yml  release-testpypi.yml  (+1 more)
docs/: ACCESS_CONTROL.md  ALERTING.md  API_REFERENCE.md  ARCHITECTURE.md  BACKUP_RETENTION.md  CAPACITY_PLANNING.md  CHANGE_MANAGEMENT.md  COMPLIANCE_MAPPING.md  CONFIGURATION.md  DATA_CLASSIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_REPORT.md  FIELD_DRILLS.md  LOAD_TESTING.md  OBSERVABILITY.md  OPERATOR_GUIDE.md  PERFORMANCE.md  PRODUCTION_READINESS.md  RELEASE_PROCESS.md  RELEASE_TESTING.md  ROLLOUT_CHECKLIST.md  RUNBOOKS.md  SCHEMA_GOVERNANCE.md  SECRETS_ROTATION.md  SLO_SLI.md  SUPERVISOR_INTEGRATION.md  TELEMETRY_MAPPING.md  TELEMETRY_SCHEMA.md  TESTING.md  THREAT_MODEL.md  TRACING_CONVENTIONS.md
tests/: test_alerting_webhook.py  test_audit_config_drift.py  test_audit_rotation.py  test_circuit_breaker_durable_writes.py  test_cleanup.py  test_cli_e2e.py  test_config_drift_detection.py  test_config_tracing.py  test_fault_injection.py  test_file_ingest.py  test_idempotent_outputs.py  test_logging_metrics_retry_shutdown.py  test_metrics_singleton.py  test_normalize.py  test_pipeline_integration.py  test_pipeline_outputs.py  test_policy.py  test_proxy_forwarder.py  test_rbac.py  test_release_notes_sbom_snippet.py  test_release_signing_instructions.py  test_schema_migration.py  test_scoring.py  test_secrets.py  test_telemetry_validation.py  test_v1_acceptance.py
(+61 files in other folders)
